--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>MY funny website</title>
 </head>
 <body>
-    <h6>Hi!</h6>
+    <h1>Hi fox thjis is my website hope you love it like it hate it awesome!</h1>
 </body>
 </html>
