--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY funny website</title>
+    <title>Greepos Quest</title>
 </head>
 <body>
     <h1>Hi fox thjis is my website hope you love it like it hate it awesome!</h1>
